# esp32-matter-light

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
config/: chip_project_config.h
firmware/: .gitignore  CMakeLists.txt  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32c6
firmware/config/: partitions.csv
firmware/main/: app_config.h  app_main.cpp  app_matter.h  button.h  command_parser.h  idf_component.yml  ir_remote.h  matter_light.h  matter_switch.h  motion_sensor.h  ota_utils.h  rgb_led.h  servo_motor.h  smart_light_automation.cpp  smart_light_automation.h  smart_light_commands.cpp  smart_light_commands.h  smart_light_controller.cpp  smart_light_controller.h  smart_light_settings.cpp  smart_light_settings.h  smart_light_web.cpp  smart_light_web.h  smart_light_web_page.inc  web_utils.h
firmware/tools/web_preview/: README.md  server.py
main/: CMakeLists.txt  app_config.h  app_log.h  app_main.cpp  brightness_sensor.h  button.h  command_parser.h  idf_component.yml  ir_remote.h  ir_transmitter.h  light_sensor.h  main.cpp  motion_sensor.h  pir_sensor.h  rgb_led.h
pcb/: esp32-matter-light.kicad_pro  esp32-matter-light.kicad_sch  sym-lib-table
pcb/lib/PaPIRs/: PaPIRs.kicad_sym
pcb/lib/PaPIRs/PaPIRs.pretty/: EKMC1607111_PAN.kicad_mod
